k8s/ingress/test-ingress.yaml

# https://kubernetes.io/zh/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  defaultBackend:
    service:
      name: httpd-service
      port:
        number: 80
